# pmdd-platform

./: .env  .env.example  ARCHITECTURE.md  DEPLOYMENT.md  Makefile  ONBOARDING.md  PMDD_Advanced_Architecture_Blueprint.docx  PMDD_Production_Infrastructure_Blueprint.docx  PMDD_Scientific_Analysis_Report_Design.docx  README.md  create_blueprint_docx.py  create_pdf.py  docker-compose.yml  finalize_pmdd.py  package-lock.json  package.json  pmdd.db  pyproject.toml  report_design.md  requirements.txt  sample_corpus.txt  scaffold.py  scaffold_frontend.py  scaffold_phase2.py  scaffold_phase3.py  scaffold_phase4.py  scaffold_phase5.py  scaffold_phase6.py  scaffold_phase7.py  tailwind.config.ts  test_upload.txt  tsconfig.json
agents/: agent1_preprocessor.py  agent2_pragmatic.py  agent3_semantic.py  agent4_quantitative.py  agent5_orchestrator.py  base.py  prompts.py  schemas.py
backend/: main.py
backend/api/: deps.py
backend/api/routes/: auth.py  projects.py  router.py  websocket.py
backend/core/: config.py  events.py  logging.py  security.py
backend/db/: base.py  database.py
backend/db/models/: __init__.py  corpus.py
backend/services/: pdf_generator.py
backend/workers/: celery_app.py  tasks.py
