[tool.poetry]
name = "pmdd-core"
version = "0.1.0"
description = "Pragmatic Meaning Drift Detector"
authors = ["GC"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
pydantic-settings = "^2.2.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.29"}
asyncpg = "^0.29.0"
alembic = "^1.13.1"
openai = "^1.14.2"
langchain = "^0.1.13"
langgraph = "^0.0.30"
pinecone-client = "^3.2.2"

[tool.ruff]
line-length = 88
target-version = "py311"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
